# Projects

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  bootstrap.bat  bootstrap.sh
CMake/: BuildSettings.cmake
PackageManagers/: bootstrap.bat  bootstrap.sh  build_packages.bat  build_packages.sh  protect.bat  protect.sh  unprotect.bat  unprotect.sh
PackageManagers/PackageList/vcpkg/: README.md  package-list.txt  package_list.txt  triplets-windows.txt
Scripts/: is_wsl.sh  vcpkg_install_for_windows.bat
Sources/: CMakeLists.txt
Sources/cpp/: CMakeLists.txt
TestingCode/: CMakeLists.txt
TestingCode/cpp/: CMakeLists.txt  main.cpp  testing_code.cpp
